2002-09-29    <smulloni@smullbola.smullyan.org>

	* pylibs/xmlrpchandler.py: helper module for writing XMLRPC servers. 

2002-09-04  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/flowmgr/parser.py: parser for flow manager, partially
	verified.  
	(pyeval): made it a function, not a lambda.

2002-08-30  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/flowmgr/flowdef.dtd: DTD for flow definitions.

	* pylibs/xmlutils.py (XMLElement.__init__): made attributes
	dictionary directly available and non-private.

2002-08-29  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/xmlutils.py (makeElement): modified parser so it could
	produce different element classes depending on element name and
	elementClassRegistry. (XMLElement.getChildrenByAttribute): moved
	this here from ecs.xhtml; also added method aliases getElement,
	getElements, getElementsByAttribute.

	* pylibs/ecs/xhtml.py (parse): added parse method that returns
	a tree of Elements given an xhtml string.

2002-08-28  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlutils.py (XMLElement.__str__): now adds spaces in
	empty elements for user-agent compatibility with xhtml.

	* pylibs/ecs/__init__.py, xhtml.py: An ECS-clone for Python.  Uses
	xmlutils.  Now I need to add a parser, and support comments, etc.

2002-08-16  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/formlib/set.py, pylibs/formlib/state.py, pylibs/formlib/reqs:
	added beginnings of formlib

	* SkunkWeb/sw.conf.in: added userModuleCleanupIgnore and some
	extra docs.

	* SkunkWeb/SkunkWeb/Server.py (SkunkWebServer.postHandle): added
	config option userModuleCleanupIgnore so you can specify module
	prefixes that the umc cleaner should not clean

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.typeCheckAndConvert): added
	check for longtype.

2002-08-15  Andrew Csillag  <drew@localhost.localdomain>

	* 3.3 cut

2002-08-13  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/Services/extcgi.py: now logs the signal number of the